--- a/twitter-server/package.json
+++ b/twitter-server/package.json
@@ -6,14 +6,19 @@
   "license": "MIT",
   "scripts": {
     "start": "node build/index",
-    "build":"tsc -p .",
-    "dev":"tsc-watch --onSuccess \"npm start\""
+    "build": "tsc -p .",
+    "dev": "tsc-watch --onSuccess \"npm start\""
   },
   "devDependencies": {
+    "prisma": "^5.10.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "express": "^4.18.3"
+    "@apollo/server": "^4.10.1",
+    "@prisma/client": "^5.10.2",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.3",
+    "graphql": "^16.8.1"
   }
 }
