--- a/twitter-server/package.json
+++ b/twitter-server/package.json
@@ -17,8 +17,13 @@
   "dependencies": {
     "@apollo/server": "^4.10.1",
     "@prisma/client": "^5.10.2",
+    "@types/cors": "^2.8.17",
+    "@types/jsonwebtoken": "^9.0.6",
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
