--- a/twitter-client/package.json
+++ b/twitter-client/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.28.4",
     "@tanstack/react-query-devtools": "^5.28.4",
+    "axios": "^1.6.8",
     "graphql": "^16.8.1",
     "next": "14.1.3",
     "react": "^18",
